--- a/index.html
+++ b/index.html
@@ -244,9 +244,12 @@
             <div class="prize-section">
                 <h2 class="prize-title">🏎️ Premio del Sorteo 🏎️</h2>
                 <div class="gallery">
-                    <div class="photo-placeholder">📸</div>
-                    <div class="photo-placeholder">📸</div>
-                    <div class="photo-placeholder">📸</div>
+                    <div class="photo-placeholder"><img src="lanbo.jpg" alt="">
+</div>
+                    <div class="photo-placeholder"><img src="lanbo1.jpg" alt="">
+</div>
+                    <div class="photo-placeholder"><img src="audi.jpg" alt="">
+</div>
                 </div>
             </div>
 
@@ -377,4 +380,5 @@
 </body>
 
 </html>
+
 
