--- a/index.html
+++ b/index.html
@@ -228,6 +228,19 @@
                 width: 100%;
             }
         }
+
+        .photo-placeholder {
+    padding: 0;
+    overflow: hidden;
+}
+
+.photo-placeholder img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* mantiene proporción */
+    border-radius: 15px;
+    display: block;
+}
     </style>
 </head>
 <body>
@@ -376,6 +389,7 @@
 </body>
 
 </html>
+
 
 
 
