--- a/index.html
+++ b/index.html
@@ -264,11 +264,14 @@
 
             <div class="info-section">
                 <h2>📋 Información del Sorteo</h2>
-                <p><strong>🎯 Premio:</strong> Increíble carrito de juguete de alta calidad</p>
+                <p><strong>🎯 Premio:</strong>1 er lugar: un coche electrico</p>
+                 <p><strong>🎯 Premio:</strong>2 do lugar: cupon de descuento de 400 bs</p>
+                 <p><strong>🎯 Premio:</strong>3 er lugar: cupon de descuento de 200 bs</p>
+                <p><strong>🎯 Premio:</strong>con la compra de tu ticket recibes un descuento automatico de 50 bs </p>
                 <p><strong>💰 Precio por número:</strong> Bs. XX.XX</p>
                 <p><strong>🎲 Números disponibles:</strong> Del 00 al 99</p>
-                <p><strong>📅 Fecha del sorteo:</strong> [Fecha por definir]</p>
-                <p><strong>🏆 Ganador:</strong> Se determinará según [lotería/método]</p>
+                <p><strong>📅 Fecha del sorteo:</strong>Hasta acabar numero</p>
+                <p><strong>🏆 Ganador:</strong> Se determinará según sorteo</p>
             </div>
 
             <div class="buttons-container">
@@ -389,6 +392,7 @@
 </body>
 
 </html>
+
 
 
 
