--- a/index.html
+++ b/index.html
@@ -268,9 +268,9 @@
                  <p><strong>🎯 Premio:</strong>2 do lugar: cupon de descuento de 400 bs</p>
                  <p><strong>🎯 Premio:</strong>3 er lugar: cupon de descuento de 200 bs</p>
                 <p><strong>🎯 Premio:</strong>con la compra de tu ticket recibes un descuento automatico de 50 bs </p>
-                <p><strong>💰 Precio por número:</strong> Bs. XX.XX</p>
+                <p><strong>💰 Precio por número:</strong> Bs. 30 bs</p>
                 <p><strong>🎲 Números disponibles:</strong> Del 00 al 99</p>
-                <p><strong>📅 Fecha del sorteo:</strong>Hasta acabar numero</p>
+                <p><strong>📅 Fecha del sorteo:</strong>Hasta acabar ticket</p>
                 <p><strong>🏆 Ganador:</strong> Se determinará según sorteo</p>
             </div>
 
@@ -392,6 +392,7 @@
 </body>
 
 </html>
+
 
 
 
