--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
         };
 
         // Números vendidos (se cargarán desde Google Sheets)
-        let soldNumbers = [77,];
+        let soldNumbers = [77, 70];
 
         // Cargar números vendidos desde Google Sheets
         async function loadSoldNumbers() {
@@ -392,6 +392,7 @@
 </body>
 
 </html>
+
 
 
 
